Improved RabbitMQ implementation, made RabbitMQ variables configurable