@@ -1,27 +1,42 @@
 package de.thi.cnd.ingredient;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import de.thi.cnd.ingredient.broker.BrokerService;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 public class IngredientService {
 
-    private RabbitTemplate rabbitTemplate;
+    private BrokerService brokerService;
     private final IngredientRepository ingredientRepository;
 
+    @Value("${app.message.queue.ingredients.routing.created}")
+    private String routingKeyCreated;
+
+    @Value("${app.message.queue.ingredients.routing.updated}")
+    private String routingKeyUpdated;
+
+    @Value("${app.message.queue.ingredients.routing.deleted}")
+    private String routingKeyDeleted;
+
+    @Value("${app.message.queue.ingredients.routing.tag}")
+    private String routingKeyTag;
+
     @Autowired
-    public IngredientService(RabbitTemplate rabbitTemplate, IngredientRepository ingredientRepository) {
-        this.rabbitTemplate = rabbitTemplate;
+    public IngredientService(BrokerService brokerService, IngredientRepository ingredientRepository) {
+        this.brokerService = brokerService;
         this.ingredientRepository = ingredientRepository;
     }
 
@@ -32,13 +47,16 @@ public class IngredientService {
         }
 
         // Alle Tags toLowerCase
-        ingredient.setTags(ingredient.getTags().stream()
+        List<String> tags = ingredient.getTags().stream()
                 .map(String::toLowerCase)
-                .collect(Collectors.toList()));
+                .toList();
+        ingredient.setTags(tags);
+
+        checkForNewTags(tags, getAllTags());
 
         try {
             String ingredientJson = new ObjectMapper().writeValueAsString(ingredient);
-            this.sendMessage("ingredients.created", ingredientJson);
+            brokerService.sendMessage(routingKeyCreated, ingredientJson);
         } catch (Exception ex) {
             System.out.println(ex.getMessage());
         }
@@ -60,7 +78,7 @@ public class IngredientService {
 
         try {
             String ingredientJson = new ObjectMapper().writeValueAsString(ingredient);
-            this.sendMessage("ingredients.deleted", ingredientJson);
+            brokerService.sendMessage(routingKeyDeleted, ingredientJson);
         } catch (Exception ex) {
             System.out.println(ex.getMessage());
         }
@@ -86,6 +104,7 @@ public class IngredientService {
     @Transactional
     public Ingredient updateIngredient(Long ingredientId, Ingredient updatedIngredient) {
         Ingredient ingredient = getIngredientById(ingredientId);
+        Set<String> existingTags = getAllTags();
 
         if (updatedIngredient.getName() != null) {
             Optional<Ingredient> ingredientByName = ingredientRepository.findIngredientByName(updatedIngredient.getName());
@@ -98,13 +117,42 @@ public class IngredientService {
             ingredient.setUnit(updatedIngredient.getUnit());
         }
         if (updatedIngredient.getTags() != null) {
-            ingredient.setTags(updatedIngredient.getTags());
+            List<String> newTags = updatedIngredient.getTags().stream()
+                    .map(String::toLowerCase)
+                    .toList();
+            ingredient.setTags(newTags);
+
+            checkForNewTags(newTags, existingTags);
         }
+
+        try {
+            String ingredientJson = new ObjectMapper().writeValueAsString(ingredient);
+            brokerService.sendMessage(routingKeyUpdated, ingredientJson);
+        } catch (Exception ex) {
+            System.out.println(ex.getMessage());
+        }
+
         return ingredient;
     }
 
-    public void sendMessage(String routing_key, String message) {
-        rabbitTemplate.convertAndSend("cnd.ingredients_exchange", routing_key, message);
+    public Set<String> getAllTags() {
+        return ingredientRepository.findAll().stream()
+                .flatMap(ingredient -> ingredient.getTags().stream())
+                .map(String::toLowerCase)
+                .collect(Collectors.toSet());
     }
 
+    private void checkForNewTags(List<String> newTags, Set<String> existingTags) {
+        List<String> addedTags = newTags.stream()
+                .filter(tag -> !existingTags.contains(tag)) // Prüft, ob das Tag noch nicht existiert
+                .toList();
+
+        addedTags.forEach(tag -> {
+            try {
+                brokerService.sendMessage(routingKeyTag, tag);
+            } catch (Exception ex) {
+                System.out.println(ex.getMessage());
+            }
+        });
+    }
 }
